--- a/package.json
+++ b/package.json
@@ -11,24 +11,31 @@
 		"url": "https://sindresorhus.com"
 	},
 	"type": "module",
-	"exports": {
-		"types": "./index.d.ts",
-		"default": "./index.js"
-	},
-	"sideEffects": false,
-	"engines": {
-		"node": ">=18.20"
-	},
-	"scripts": {
-		"//test": "xo && ava && tsc --noEmit index.d.ts",
-		"test": "ava && tsc --noEmit index.d.ts",
-		"asciicast": "asciinema rec --command='node example-all.js' --title='cli-spinner' --quiet"
-	},
-	"files": [
-		"index.js",
-		"index.d.ts",
-		"spinners.json"
-	],
+        "exports": {
+                "types": "./index.d.ts",
+                "default": "./index.js",
+                "./appworld/common": "./appworld/common.js",
+                "./appworld/organization": "./appworld/organization.js",
+                "./appworld/cli/appworld": "./appworld/cli/appworld.js"
+        },
+        "sideEffects": false,
+        "engines": {
+                "node": ">=18.20"
+        },
+        "bin": {
+                "appworld": "./appworld/cli/appworld.js"
+        },
+        "scripts": {
+                "//test": "xo && ava && tsc --noEmit index.d.ts",
+                "test": "ava && tsc --noEmit index.d.ts",
+                "asciicast": "asciinema rec --command='node example-all.js' --title='cli-spinner' --quiet"
+        },
+        "files": [
+                "index.js",
+                "index.d.ts",
+                "spinners.json",
+                "appworld"
+        ],
 	"keywords": [
 		"cli",
 		"spinner",
